solc_ossfuzz_seed_corpus/test_sol/test_507934bc90bb21c7faf83288a986abd46241ac4c22e53c701edd39dfcc1b4531_2dc31ce3c74da4beb6923ddd83be9252dd9cad0b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0(address payable i0,bool i1) public    returns(bytes23 o0,int128 o1)
  {
  }
  modifier m0(bytes25 i0) 
  {
    (bytes23 l0, int128 l1) = f0(payable(address(ripemd160(bytes("0000000000000000000000000000000000000000000000000000000000000000000000000000000000")))),(true || ((true && true) && false)));
    _;
  }
  function f1(address payable i0,function (function () external   returns (bytes25), int72) external   returns (bool, bytes23, bytes1) i1,bytes28 i2) private    returns(int176 o0,bytes30 o1)
  {
    if (false)
    {
    }
    assembly
    {
    }
  }
  error er0();
  modifier m1() 
  {
    _;
    assembly
    {
      return(115792089237316195423570985008687907853269984665640564039457584007913129639935, calldataload(mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, calldatasize())))
    }
  }
  event ev0(function (uint32[2] memory, function () external   returns (string memory, address payable, uint24), address payable) internal   returns (int8)  ep0);
  function f2(function (int40, uint224, bool[2][1] memory) internal   returns (bytes16, bytes24) i0) public  m1() m1()  returns(bytes11 o0,bool o1)
  {
  }
  modifier m2() 
  {
    _;
    (bytes23 l0, int128 l1) = f0(payable(address(0x0000000000000000000000000000000000000002)),true);
  }
  event ev1(function (uint8, uint32) external    ep0, bytes31  ep1);
  function f3() internal  m2() m0(bytes25(0xffffffffffffffffffffffffffffffffffffffffffffffffff))  returns(address payable o0,address o1)
  {
    (bytes23 l0, int128 l1) = f0(payable(address(0x0000000000000000000000000000000000000007)),(uint216(0) > uint216(0)));
  }
  using L0 for *;
}
pragma solidity >= 0.0.0;
function f4(bool i0,address payable i1)     returns(bytes15[] memory o0)
{
  assembly
  {
    o0 := 80620892442407033097303653621110480335114402447500850014438675721731922221431
  }
}
struct St0 {
  bool el0;
  address el1;
  int224 el2;
  bool el3;
}
using L0 for uint;
library L1 {
  event ev2(int168  ep0);
  function f5(St0 memory i0) public   
  {
  }
  function f6(int112 i0) public   
  {
  }
  function f7() private    returns(int88 o0,bytes19 o1)
  {
  }
}
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:880-1028): Internal or recursive type is not allowed as event parameter type.
// TypeError 4103: (su0.sol:1045-1130): Internal type is not allowed for public or external functions.
